...
            app:layout_constraintTop_toTopOf="parent"
            android:text="User Name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/followButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading"
            app:layout_constraintTop_toBottomOf="@id/username"
            app:layout_constraintLeft_toLeftOf="parent"
            />
...
            app:layout_constraintTop_toBottomOf="@id/followButton"
            app:layout_constraintLeft_toLeftOf="parent"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deleteUserButton"
            app:layout_constraintBottom_toBottomOf="parent"
...
