<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="Home"
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        />
    <item
        android:title="Search"
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        />
    <item
        android:title="Trending"
        android:id="@+id/trending"
        android:icon="@drawable/baseline_trending_up_24"
        />
    <item
        android:title="Nearby"
        android:id="@+id/nearby"
        android:icon="@drawable/baseline_map_24"
        />
    <item
        android:title="Profile"
        android:id="@+id/profile"
        android:icon="@drawable/baseline_manage_accounts_24"
        />
</menu>