...
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LOADING" />

</LinearLayout>
