<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TrendingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/genreSpinner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trendingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            tools:context=".fragment.TrendingFragment"
            />

    </LinearLayout>


</FrameLayout>